--- a/project/incomes/templates/incomes/incomes_list.html
+++ b/project/incomes/templates/incomes/incomes_list.html
@@ -17,7 +17,7 @@
             <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_incomes }}"><i class="fas fa-plus"></i> Pajamas</button>
         </div>
     </div>
-    <div id="ajax-content" class="dblclick">{% include 'incomes/includes/partial_incomes_list.html' %}</div>
+    <div id="ajax-content" class="dblclick">{{ incomes }}</div>
 </div>
 <div class="col-4 px-0">
     <div class="row my-2">
