--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -39,7 +39,7 @@
             <a class="nav-link {% if '/expenses/' in request.path %}active{% endif %}" href="{% url 'expenses:expenses_list' %}">Išlaidos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if '/incomes/' in request.path %}active{% endif %}" href="{% url 'incomes:incomes_list' %}">Pajamos</a>
+            <a class="nav-link {% if '/incomes/' in request.path %}active{% endif %}" href="{% url 'incomes:incomes_index' %}">Pajamos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link {% if '/transactions/' in request.path %}active{% endif %}"
