--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -47,7 +47,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link {% if '/savings/' in request.path %}active{% endif %}"
-              href="{% url 'savings:savings_list' %}">Taupymas</a>
+              href="{% url 'savings:savings_index' %}">Taupymas</a>
           </li>
           <li class="nav-item">
             <a class="nav-link {% if '/books/' in request.path %}active{% endif %}"
