--- a/project/plans/templates/plans/plans_list.html
+++ b/project/plans/templates/plans/plans_list.html
@@ -16,7 +16,7 @@
             <h6>Pajamų planas</h6>
         </div>
         <div class="col-2 text-right">
-            {% url 'plans:plans_incomes_new' as url_incomes_new %}
+            {% url 'plans:incomes_plan_new' as url_incomes_new %}
             <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_incomes_new }}"><i
                     class="fas fa-plus"></i> Įrašą</button>
         </div>
@@ -29,7 +29,7 @@
     <div class="row my-2">
         <div class="col-10"><h6>Išlaidų planas</h6></div>
         <div class="col-2 text-right">
-            {% url 'plans:plans_expenses_new' as url_expenses_new %}
+            {% url 'plans:expenses_plans_new' as url_expenses_new %}
             <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expenses_new }}"><i class="fas fa-plus"></i> Įrašą</button>
         </div>
     </div>
@@ -43,7 +43,7 @@
             <h6>Taupymo planas</h6>
         </div>
         <div class="col-2 text-right">
-            {% url 'plans:plans_savings_new' as url_savings_new %}
+            {% url 'plans:savings_plans_new' as url_savings_new %}
             <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_savings_new }}"><i class="fas fa-plus"></i> Įrašą</button>
         </div>
     </div>
@@ -57,7 +57,7 @@
             <h6>Suma dienai</h6>
         </div>
         <div class="col-2 text-right">
-            {% url 'plans:plans_day_new' as url_day_new %}
+            {% url 'plans:days_plans_new' as url_day_new %}
             <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_day_new }}"><i class="fas fa-plus"></i> Įrašą</button>
         </div>
     </div>
