removed partial_ in generic template

--- a/project/plans/templates/plans/includes/days_plan_list.html
+++ b/project/plans/templates/plans/includes/days_plan_list.html
@@ -1,2 +1,2 @@
-{% load partial_generic_list %}
+{% load generic_list %}
 {% generic_list items 'plans:days_plans_update' request.user.profile.year 'Dienai' %}
