--- a/project/expenses/templates/expenses/expenses.html
+++ b/project/expenses/templates/expenses/expenses.html
@@ -18,7 +18,7 @@
             <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expense_new }}"><i class="fas fa-plus"></i> Išlaidas</button>
         </div>
     </div>
-    <div id="ajax-content" class="dblclick">{% include 'expenses/includes/expenses_list.html' %}</div>
+    <div id="ajax-content" class="dblclick">{{ expenses }}</div>
 </div>
 <div class="col-4 px-0">
     <div class="row my-2">
