--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -36,7 +36,7 @@
             <a class="nav-link {% if '/' == request.path %}active{% endif %}" href="{% url 'bookkeeping:index' %}">Bendra</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if '/expenses/' in request.path %}active{% endif %}" href="{% url 'expenses:expenses_list' %}">Išlaidos</a>
+            <a class="nav-link {% if '/expenses/' in request.path %}active{% endif %}" href="{% url 'expenses:expenses_index' %}">Išlaidos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link {% if '/incomes/' in request.path %}active{% endif %}" href="{% url 'incomes:incomes_index' %}">Pajamos</a>
