--- a/project/bookkeeping/templates/bookkeeping/includes/savings_worth_form.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/savings_worth_form.html
@@ -1,22 +1,2 @@
-{% load crispy_forms_tags %}
-<table>
-    {{ formset.management_form|crispy }}
-    {% for form in formset.forms %}
-  
-    <tr class="{% cycle 'row1' 'row2' %} formset_row-{{ formset.prefix }}">
-        {% for field in form.visible_fields %}
-        <td>
-            {# Include the hidden fields in the form #}
-            {% if forloop.first %}
-            {% for hidden in form.hidden_fields %}
-            {{ hidden }}
-            {% endfor %}
-            {% endif %}
-            {{ field.errors.as_ul }}
-            {{ field|as_crispy_field }}
-        </td>
-        {% endfor %}
-    </tr>
-    {% endfor %}
-
-</table>
+{% load formset %}
+{% generic_formset title='Fondų vertė' update_container='saving_worth' %}
