--- a/project/drinks/templates/drinks/includes/drinks_form.html
+++ b/project/drinks/templates/drinks/includes/drinks_form.html
@@ -1,2 +1,2 @@
 {% load form %}
-{% generic_form title='Taupymas' update_container='ajax-content' %}
+{% generic_form title='Gėrimai' update_container='ajax-content' %}
