changed html comment

--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -43,7 +43,7 @@
         </div>
     </div>
 
-    <!-- expenses plans -->
+    <!-- savings -->
     <div class="row my-2">
         <div class="col-10">
             <h6>Fondų vertė</h6>
