AccountsWorth View, url

--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -19,7 +19,7 @@
         </div>
     </div>
     <div class="row my-2">
-        <div id="saving_worth" class="col dblclick">{{ accounts }}</div>
+        <div id="accounts_worth" class="col dblclick">{{ accounts }}</div>
     </div>
 
     <!-- savings -->
