--- a/project/bookkeeping/templates/bookkeeping/includes/accounts_worth_list.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/accounts_worth_list.html
@@ -31,13 +31,13 @@
     <tfoot>
         <tr>
             <td>Total:</td>
-            {% td past_amount %}
-            <td></td>
-            <td></td>
-            {% td current_amount %}
+            {% td totals.past %}
+            {% td totals.incomes %}
+            {% td totals.expenses %}
+            {% td totals.balance %}
             <td class="b"></td>
-            <td></td>
-            <td></td>
+            {% td totals.have %}
+            {% td totals.delta %}
         </tr>
     </tfoot>
 </table>
