renamed return values from accounts and accounts_worth models: account -> title saving_type -> title

--- a/project/bookkeeping/templates/bookkeeping/includes/accounts_worth_list.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/accounts_worth_list.html
@@ -17,7 +17,7 @@
     <tbody>
         {% for item in accounts %}
         <tr>
-            <td>{{ item.account }}</td>
+            <td>{{ item.title }}</td>
             {% td item.past width='110rem' %}
             {% td item.incomes width='110rem' %}
             {% td item.expenses width='110rem' %}
