--- a/project/bookkeeping/templates/bookkeeping/includes/savings_worth_list.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/savings_worth_list.html
@@ -23,7 +23,7 @@
     <tbody>
         {% for item in savings %}
         <tr>
-            <td>{{ item.saving }}</td>
+            <td>{{ item.title }}</td>
             {% td item.past_amount width='110rem' %}
             {% td item.past_fee width='110rem' %}
             {% td item.incomes width='110rem' %}
