number of year in templates in converted to string with title filter, otherwise year number in template rendering with space symbol. 2 019 instead 2019

--- a/project/expenses/templates/expenses/includes/expenses_list.html
+++ b/project/expenses/templates/expenses/includes/expenses_list.html
@@ -21,7 +21,7 @@
         </tr>
         {% empty %}
         <tr class="table-warning text-center">
-            <td colspan="6" class="py-2"><b>{{ request.user.profile.year }}</b> metais išlaidų nėra.</td>
+            <td colspan="6" class="py-2"><b>{{ request.user.profile.year|title }}</b> metais išlaidų nėra.</td>
         </tr>
         {% endfor %}
     </tbody>
