--- a/project/plans/templates/plans/includes/generic_list.html
+++ b/project/plans/templates/plans/includes/generic_list.html
@@ -36,7 +36,7 @@
         </tr>
         {% empty %}
         <tr class="table-warning text-center">
-            <td colspan="13" class="py-2"><b>{{ year }}</b> metais įrašų nėra.</td>
+            <td colspan="13" class="py-2"><b>{{ year|title }}</b> metais įrašų nėra.</td>
         </tr>
         {% endfor %}
     </tbody>
