--- a/project/books/templates/books/includes/books_list.html
+++ b/project/books/templates/books/includes/books_list.html
@@ -19,7 +19,7 @@
         </tr>
         {% empty %}
         <tr class="table-warning text-center">
-            <td colspan="5" class="py-2"><b>{{ request.user.profile.year }}</b> metais irašų nėra.</td>
+            <td colspan="5" class="py-2"><b>{{ request.user.profile.year|title }}</b> metais irašų nėra.</td>
         </tr>
         {% endfor %}
     </tbody>
