--- a/project/drinks/templates/drinks/includes/drinks_list.html
+++ b/project/drinks/templates/drinks/includes/drinks_list.html
@@ -8,7 +8,7 @@
         {% for item in items %}
         {% url 'drinks:drinks_update' item.id as url_update %}
         <tr data-url="{{ url_update }}">
-            <td>{{ item.date }}</td>
+            <td>{{ item.date|date:"Y-m-d" }}</td>
             <td class="text-right">{{ item.quantity }}</td>
         </tr>
         {% empty %}
