balance table in index page

--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -6,6 +6,117 @@
 
 
 {% block content %}
+<div class="row my-2 mx-1 py-1" style="background-color: aliceblue">
+    <div class="col-sm-3">
+        {% include 'bookkeeping/includes/balance_month.html' %}
+    </div>
+
+    <div class="col-9">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vel neque massa. Cras molestie lectus ut turpis faucibus
+        mattis. Vivamus non eros ex. Donec quis nisi vel enim viverra aliquet non sit amet odio. Etiam euismod accumsan leo,
+        eget gravida tellus viverra pulvinar. Fusce scelerisque neque quis cursus suscipit. Duis varius eros velit, eu facilisis
+        eros sodales nec. Nam eget orci libero. Cras semper tempor justo. Mauris rutrum iaculis erat, eget vulputate magna
+        sollicitudin ac.
+        
+        Donec enim ipsum, aliquam ut accumsan ut, ultricies et leo. Praesent finibus sapien nec mauris cursus mattis vel a elit.
+        Sed velit sem, cursus et tempor sed, tristique non leo. Proin vitae ante facilisis tellus euismod gravida et vitae odio.
+        Vivamus molestie neque varius ipsum aliquam faucibus. Quisque pharetra diam quis metus pellentesque, et imperdiet nunc
+        hendrerit. Mauris consequat ullamcorper ornare.
+        
+        Quisque tortor neque, tincidunt ut dui et, iaculis volutpat lorem. Curabitur vitae mi consequat, hendrerit dolor quis,
+        vestibulum odio. Mauris scelerisque blandit augue, nec porttitor dolor mollis in. Interdum et malesuada fames ac ante
+        ipsum primis in faucibus. Fusce eu laoreet arcu. Aenean vel orci non odio ultricies laoreet. Phasellus sollicitudin
+        tincidunt risus nec vehicula. Aliquam in ex ac tellus finibus congue euismod quis enim. Maecenas porta felis eget
+        maximus pellentesque. Mauris sem sapien, posuere ac consectetur eu, auctor sed augue. Mauris lorem erat, mattis eu nibh
+        at, blandit commodo lacus.
+        
+        Sed tristique magna consectetur est tincidunt blandit euismod vitae dolor. Donec sem elit, egestas ut porta et, pretium
+        in nunc. Nam vitae odio eget dui consequat auctor. Donec ornare hendrerit sem at ullamcorper. Sed condimentum turpis id
+        fermentum sagittis. Praesent mattis, lacus non condimentum finibus, felis lacus condimentum ligula, in bibendum metus
+        nisl id nunc. Suspendisse tempus maximus sapien vitae tempus. Vivamus sollicitudin lectus vestibulum faucibus efficitur.
+        Cras eros magna, tincidunt vel molestie at, congue quis nisl. Vivamus mollis a ligula sit amet pretium. Cras egestas
+        augue ac leo gravida cursus. Sed a tempus leo. In consectetur justo vitae arcu efficitur, vitae placerat mauris
+        efficitur. Vivamus turpis enim, posuere sit amet nunc et, volutpat condimentum elit. Aenean nec viverra nisl, a tempor
+        metus. Integer nisi purus, cursus eget felis vel, suscipit ornare mi.
+        
+        Morbi pharetra sapien id lorem mattis, non tempus mauris commodo. Aliquam in varius libero. Aenean eleifend maximus
+        ipsum, non imperdiet libero tincidunt ac. Vivamus iaculis augue nibh, dictum semper erat finibus eget. Sed at dui ut
+        libero cursus tristique. Morbi non eros diam. Morbi sed massa lectus. Pellentesque sit amet nulla sit amet nisi
+        malesuada sagittis. Nunc sed leo vitae diam efficitur imperdiet non sit amet augue.
+    </div>
+</div>
+<div class="row my-2 mx-1" style="background-color:chartreuse">
+    <div class="col-5">
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vel neque massa. Cras molestie lectus ut turpis faucibus
+mattis. Vivamus non eros ex. Donec quis nisi vel enim viverra aliquet non sit amet odio. Etiam euismod accumsan leo,
+eget gravida tellus viverra pulvinar. Fusce scelerisque neque quis cursus suscipit. Duis varius eros velit, eu facilisis
+eros sodales nec. Nam eget orci libero. Cras semper tempor justo. Mauris rutrum iaculis erat, eget vulputate magna
+sollicitudin ac.
+
+Donec enim ipsum, aliquam ut accumsan ut, ultricies et leo. Praesent finibus sapien nec mauris cursus mattis vel a elit.
+Sed velit sem, cursus et tempor sed, tristique non leo. Proin vitae ante facilisis tellus euismod gravida et vitae odio.
+Vivamus molestie neque varius ipsum aliquam faucibus. Quisque pharetra diam quis metus pellentesque, et imperdiet nunc
+hendrerit. Mauris consequat ullamcorper ornare.
+
+Quisque tortor neque, tincidunt ut dui et, iaculis volutpat lorem. Curabitur vitae mi consequat, hendrerit dolor quis,
+vestibulum odio. Mauris scelerisque blandit augue, nec porttitor dolor mollis in. Interdum et malesuada fames ac ante
+ipsum primis in faucibus. Fusce eu laoreet arcu. Aenean vel orci non odio ultricies laoreet. Phasellus sollicitudin
+tincidunt risus nec vehicula. Aliquam in ex ac tellus finibus congue euismod quis enim. Maecenas porta felis eget
+maximus pellentesque. Mauris sem sapien, posuere ac consectetur eu, auctor sed augue. Mauris lorem erat, mattis eu nibh
+at, blandit commodo lacus.
+
+Sed tristique magna consectetur est tincidunt blandit euismod vitae dolor. Donec sem elit, egestas ut porta et, pretium
+in nunc. Nam vitae odio eget dui consequat auctor. Donec ornare hendrerit sem at ullamcorper. Sed condimentum turpis id
+fermentum sagittis. Praesent mattis, lacus non condimentum finibus, felis lacus condimentum ligula, in bibendum metus
+nisl id nunc. Suspendisse tempus maximus sapien vitae tempus. Vivamus sollicitudin lectus vestibulum faucibus efficitur.
+Cras eros magna, tincidunt vel molestie at, congue quis nisl. Vivamus mollis a ligula sit amet pretium. Cras egestas
+augue ac leo gravida cursus. Sed a tempus leo. In consectetur justo vitae arcu efficitur, vitae placerat mauris
+efficitur. Vivamus turpis enim, posuere sit amet nunc et, volutpat condimentum elit. Aenean nec viverra nisl, a tempor
+metus. Integer nisi purus, cursus eget felis vel, suscipit ornare mi.
+
+Morbi pharetra sapien id lorem mattis, non tempus mauris commodo. Aliquam in varius libero. Aenean eleifend maximus
+ipsum, non imperdiet libero tincidunt ac. Vivamus iaculis augue nibh, dictum semper erat finibus eget. Sed at dui ut
+libero cursus tristique. Morbi non eros diam. Morbi sed massa lectus. Pellentesque sit amet nulla sit amet nisi
+malesuada sagittis. Nunc sed leo vitae diam efficitur imperdiet non sit amet augue.
+    </div>
+
+    <div class="col-7">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vel neque massa. Cras molestie lectus ut turpis faucibus
+        mattis. Vivamus non eros ex. Donec quis nisi vel enim viverra aliquet non sit amet odio. Etiam euismod accumsan leo,
+        eget gravida tellus viverra pulvinar. Fusce scelerisque neque quis cursus suscipit. Duis varius eros velit, eu facilisis
+        eros sodales nec. Nam eget orci libero. Cras semper tempor justo. Mauris rutrum iaculis erat, eget vulputate magna
+        sollicitudin ac.
+        
+        Donec enim ipsum, aliquam ut accumsan ut, ultricies et leo. Praesent finibus sapien nec mauris cursus mattis vel a elit.
+        Sed velit sem, cursus et tempor sed, tristique non leo. Proin vitae ante facilisis tellus euismod gravida et vitae odio.
+        Vivamus molestie neque varius ipsum aliquam faucibus. Quisque pharetra diam quis metus pellentesque, et imperdiet nunc
+        hendrerit. Mauris consequat ullamcorper ornare.
+        
+        Quisque tortor neque, tincidunt ut dui et, iaculis volutpat lorem. Curabitur vitae mi consequat, hendrerit dolor quis,
+        vestibulum odio. Mauris scelerisque blandit augue, nec porttitor dolor mollis in. Interdum et malesuada fames ac ante
+        ipsum primis in faucibus. Fusce eu laoreet arcu. Aenean vel orci non odio ultricies laoreet. Phasellus sollicitudin
+        tincidunt risus nec vehicula. Aliquam in ex ac tellus finibus congue euismod quis enim. Maecenas porta felis eget
+        maximus pellentesque. Mauris sem sapien, posuere ac consectetur eu, auctor sed augue. Mauris lorem erat, mattis eu nibh
+        at, blandit commodo lacus.
+        
+        Sed tristique magna consectetur est tincidunt blandit euismod vitae dolor. Donec sem elit, egestas ut porta et, pretium
+        in nunc. Nam vitae odio eget dui consequat auctor. Donec ornare hendrerit sem at ullamcorper. Sed condimentum turpis id
+        fermentum sagittis. Praesent mattis, lacus non condimentum finibus, felis lacus condimentum ligula, in bibendum metus
+        nisl id nunc. Suspendisse tempus maximus sapien vitae tempus. Vivamus sollicitudin lectus vestibulum faucibus efficitur.
+        Cras eros magna, tincidunt vel molestie at, congue quis nisl. Vivamus mollis a ligula sit amet pretium. Cras egestas
+        augue ac leo gravida cursus. Sed a tempus leo. In consectetur justo vitae arcu efficitur, vitae placerat mauris
+        efficitur. Vivamus turpis enim, posuere sit amet nunc et, volutpat condimentum elit. Aenean nec viverra nisl, a tempor
+        metus. Integer nisi purus, cursus eget felis vel, suscipit ornare mi.
+        
+        Morbi pharetra sapien id lorem mattis, non tempus mauris commodo. Aliquam in varius libero. Aenean eleifend maximus
+        ipsum, non imperdiet libero tincidunt ac. Vivamus iaculis augue nibh, dictum semper erat finibus eget. Sed at dui ut
+        libero cursus tristique. Morbi non eros diam. Morbi sed massa lectus. Pellentesque sit amet nulla sit amet nisi
+        malesuada sagittis. Nunc sed leo vitae diam efficitur imperdiet non sit amet augue.
+    </div>
+</div>
+
+
+
 <div class="col-8 pl-0">
     <!-- accounts stats -->
     <div class="row my-2">
@@ -35,7 +146,40 @@
     <div class="row my-2">
         <div id="saving_worth" class="col dblclick">{{ savings }}</div>
     </div>
+</div>
 
+<div class="col-4 px-0">
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vel neque massa. Cras molestie lectus ut turpis faucibus
+mattis. Vivamus non eros ex. Donec quis nisi vel enim viverra aliquet non sit amet odio. Etiam euismod accumsan leo,
+eget gravida tellus viverra pulvinar. Fusce scelerisque neque quis cursus suscipit. Duis varius eros velit, eu facilisis
+eros sodales nec. Nam eget orci libero. Cras semper tempor justo. Mauris rutrum iaculis erat, eget vulputate magna
+sollicitudin ac.
+
+Donec enim ipsum, aliquam ut accumsan ut, ultricies et leo. Praesent finibus sapien nec mauris cursus mattis vel a elit.
+Sed velit sem, cursus et tempor sed, tristique non leo. Proin vitae ante facilisis tellus euismod gravida et vitae odio.
+Vivamus molestie neque varius ipsum aliquam faucibus. Quisque pharetra diam quis metus pellentesque, et imperdiet nunc
+hendrerit. Mauris consequat ullamcorper ornare.
+
+Quisque tortor neque, tincidunt ut dui et, iaculis volutpat lorem. Curabitur vitae mi consequat, hendrerit dolor quis,
+vestibulum odio. Mauris scelerisque blandit augue, nec porttitor dolor mollis in. Interdum et malesuada fames ac ante
+ipsum primis in faucibus. Fusce eu laoreet arcu. Aenean vel orci non odio ultricies laoreet. Phasellus sollicitudin
+tincidunt risus nec vehicula. Aliquam in ex ac tellus finibus congue euismod quis enim. Maecenas porta felis eget
+maximus pellentesque. Mauris sem sapien, posuere ac consectetur eu, auctor sed augue. Mauris lorem erat, mattis eu nibh
+at, blandit commodo lacus.
+
+Sed tristique magna consectetur est tincidunt blandit euismod vitae dolor. Donec sem elit, egestas ut porta et, pretium
+in nunc. Nam vitae odio eget dui consequat auctor. Donec ornare hendrerit sem at ullamcorper. Sed condimentum turpis id
+fermentum sagittis. Praesent mattis, lacus non condimentum finibus, felis lacus condimentum ligula, in bibendum metus
+nisl id nunc. Suspendisse tempus maximus sapien vitae tempus. Vivamus sollicitudin lectus vestibulum faucibus efficitur.
+Cras eros magna, tincidunt vel molestie at, congue quis nisl. Vivamus mollis a ligula sit amet pretium. Cras egestas
+augue ac leo gravida cursus. Sed a tempus leo. In consectetur justo vitae arcu efficitur, vitae placerat mauris
+efficitur. Vivamus turpis enim, posuere sit amet nunc et, volutpat condimentum elit. Aenean nec viverra nisl, a tempor
+metus. Integer nisi purus, cursus eget felis vel, suscipit ornare mi.
+
+Morbi pharetra sapien id lorem mattis, non tempus mauris commodo. Aliquam in varius libero. Aenean eleifend maximus
+ipsum, non imperdiet libero tincidunt ac. Vivamus iaculis augue nibh, dictum semper erat finibus eget. Sed at dui ut
+libero cursus tristique. Morbi non eros diam. Morbi sed massa lectus. Pellentesque sit amet nulla sit amet nisi
+malesuada sagittis. Nunc sed leo vitae diam efficitur imperdiet non sit amet augue.
 </div>
 
 <div class="modal fade" id="modal-form">
