--- a/project/core/templates/core/includes/cell_decimal.html
+++ b/project/core/templates/core/includes/cell_decimal.html
@@ -1,3 +1,9 @@
 {% load cell_format %}
 
-{% with value as val %}<td class="{% if negative %}{{ val|negative }}{% endif %}{% if positive %}{{ val|positive }}{% endif %}" {% if width %}width="{{ width }}"{% endif %}>{{ val|floatformat:2 }}{% if text %}{{ text }}{% endif %}</td>{% endwith %}
+{% with value as val %}
+<{{ tag }} class="{% if highlight_value %}{{ val|positive_negative }}{% endif %}" {% if width %}width="{{ width }}"{% endif %}>
+{% if text_before %}{{ text_before }}{% endif %}
+{{ val|floatformat:2 }}
+{% if text_after %}{{ text_after }}{% endif %}
+</{{ tag }}>
+{% endwith %}
