highlight_value changes in templates

--- a/project/bookkeeping/templates/bookkeeping/includes/accounts_worth_list.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/accounts_worth_list.html
@@ -24,7 +24,7 @@
             {% td item.balance width='110rem' %}
             <td width="80rem" class="b"></td>
             {% td item.have width='110rem' %}
-            {% td item.delta width='110rem' negative=True positive=True  %}
+            {% td item.delta width='110rem' highlight_value=True  %}
         </tr>
         {% endfor %}
     </tbody>
