--- a/project/bookkeeping/templates/bookkeeping/includes/balance_month.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/balance_month.html
@@ -1,4 +1,4 @@
-{% load cell_decimal %}{% load cell_format %}
+{% load table_cell %}{% load cell_format %}
 <table class="table table-striped table-hover">
     <thead class="thead-light">
         <tr>
